src-built-in/components/appLauncher2/style.css
body {
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: normal;
}


img {
    user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.app-launcher-menu {
    height: 100%;
}

.pointer {
    cursor: pointer;
}

#wrapper {
    height: 100%;
}
.top {
    margin-top: 10px;
}

.folder-list div {
    outline: none;
}

.folder-list {
    margin-top: 10px;
    max-height: 245px;
    overflow: auto;
}
.bottom {
    position: absolute;
    bottom: 12px;
    width: 150px;
}

.bottom .complex-menu-section-toggle {
    display: flex;
    justify-content: flex-start;
}

.complex-menu-wrapper {
    display: flex;
    height: 100%;
    overflow: hidden;
    justify-content: flex-start;
}

.complex-menu-left-nav-header-img {
    width: 29px;
    height: 31px;
    margin-right: 15px;
    padding-left: 13px;
    padding-top: 11px;
    padding-bottom: 7px;
}

.complex-menu-content-section, .complex-menu-left-nav {
    display: flex;
}

.complex-menu-left-nav {
    width: 150px;
    font-size: 12px;
    flex-direction: column;
    background-color: var(--appMenu-leftNav-background-color);
}

.complex-menu-header-wrapper {
    display: flex;
    justify-content: space-between;
}

.content-section-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.app-launcher {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.ff-close {
    cursor: pointer;
}

.ff-close:hover {
    color: var(--appMenu-close-hover-color);
}

.tags-list .app-tag .ff-close {
	margin-top: 3px;
}

.left-nav-label {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.left-nav-label i {
    padding-right: 4px;
    font-size: 13px;
    color: var(--appMenu-leftNav-icon-color);
}

.left-nav-label .folder-action-icons {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
}

.left-nav-label .ff-favorite {
    color: var(--yellow3);
}

.left-nav-label input {
    color: var(--appMenu-font-color);
    width: 100%;
    font-family: var(--font-family);
    font-weight: var(--primary-font-weight);
	background: none;
	border: 0;
	border-bottom: solid 1px var(--appMenu-search-input-inactive-color);
	font-size: 14px;
	transition: .2s ease-in;
}

.left-nav-label input:focus {
    border-bottom: solid 1px var(--appMenu-search-input-active-color);
	outline: none;
}

.complex-menu-section-toggle {
    padding: 5px 5px 5px 0px;
    padding-left: 7px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
}

.complex-menu-action {
    padding: 5px 5px 5px 0px;
    padding-left: 7px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.complex-menu-action i {
    color: var(--appMenu-leftNav-icon-color);
    padding-right: 4px;
    font-size: 13px;
}


.complex-menu-section-toggle .ff-dots-vert {
    color: var(--appMenu-font-color);
    display:flex;
    justify-self: flex-end;
}

.complex-menu-section-toggle:hover {
    cursor: pointer;
    background-color: var(--appMenu-leftNav-highlighter-hover);
}

.complex-menu-action:hover {
    cursor: pointer;
    background-color: var(--appMenu-leftNav-highlighter-hover);
}

.active-section-toggle {
    background-color: var(--appMenu-leftNav-highlighter);
}

.complex-menu-content-row {
    flex: 1;
    padding: .75em .75em .75em 0;
    align-content: flex-start;
    background-color: var(--appMenu-background-color);
}

.folder-actions-menu-wrapper {
    height: 17px;
    display: table;
	position: absolute;
	right: 10px;
}

.folder-actions-menu-wrapper span {
	line-height: 17px;
	font-size: 10px;
	cursor: pointer;
}

.folder-actions-menu {
    z-index: 11;
    top: 5px;
	position: absolute;
	width: 70px;
	max-height: 200px;
	overflow-y: auto;
	border-radius: 3px;
  	background-color: var(--appMenu-leftNav-contextMenu-background-color);
    padding: 5px 10px;
}

.folder-actions-menu ul {
	padding: 0;
	margin: 0;
}

.folder-actions-menu li {
    cursor: pointer;
	line-height: 19px;
	font-size: 11px;
	list-style: none;
	color: var(--appMenu-font-color);
}

.no-top-border {
    border-top: 1px solid transparent;
}

::-webkit-scrollbar-track {
    border-radius: 3px;
    background-color: transparent;
}

::-webkit-scrollbar-track-piece {
    display: none;
}

::-webkit-scrollbar {
    width: 5px;
    background-color: transparent;
    border-radius: 3px;
}

/* .ff-edit {
    align-self: flex-start;
} */

/* ::-webkit-scrollbar {
    width: 5px;
    background-color: var(--scrollbar-color);
    border-radius: 3px;
} */

::-webkit-scrollbar-thumb {
    cursor: pointer;
    border-radius: 3px;
    background-color: var(--appMenu-scrollbar-color);
}

select:focus, option:focus {
    outline: none;
    background-color: transparent;
}

.actions-menu-wrapper {
	height: 17px;
	display: table;
	position: absolute;
	top: 10px;
	right: 10px;
}
.actions-menu-wrapper span {
	line-height: 17px;
	font-size: 10px;
	cursor: pointer;
}
.actions-menu-wrapper span i {
	margin-right: 5px;
	font-size: 14px;
}
.actions-menu {
	background: var(--appMenu-actions-menu-background-color);
	z-index: 10;
    top: 22px;
	position: absolute;
	width: 132px;
	max-height: 214px;
	overflow-y: auto;
}
.actions-menu ul {
	padding: 0;
	margin: 4px 0;
}
.actions-menu li {
	font-size: 11px;
	cursor: pointer;
	padding: 5px 8px;
}

.app-item {
    border-bottom: solid 1px var(--appMenu-app-item-bottom-border-color);
    position: relative;
    padding: 6px .75em;
  }

  .app-item, .app-item-title, .app-item-tags {
    display: block;
    font-weight: var(--primary-font-weight);
    font-size: 11px;
  }

  .app-item-title .ff-favorite{
    margin-left: 6px;
    color: var(--appMenu-app-favorite-color);
  }

  .app-item-title .app-friendly-name {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    width: 405px;
  }

  .app-item-tags {
    display: flex;
    align-items: center;
  }

  .app-item-tags i {
    padding-right: 6px;
  }

  .app-item:hover {
    background-color: var(--appMenu-app-item-hover-background-color);
  }

  .app-item-title {
    display: flex;
    align-items: center;
    font-size: 13px;
    margin-bottom: 7px;
    line-height: 1;
  }

  .app-item-title i {
    padding-right: 4px;
    color: var(--appMenu-app-icon-color);
  }

  .filter-sort {
	width: 100%;
	margin-bottom: 10px;
}
.sort {
    font-size: 11px;
    padding-left: 10px;
  }

  .sort-option.first {
      margin-left: 10px;
  }

  .sort-option {
    font-size: 11px;
    border-radius: 2px;
    border: solid 1px var(--appMenu-sort-inactive-border-color);
    height: 16px;
    line-height: 16px;
    padding: 2px 5px 1px 5px;
    display: inline-block;
    margin: 0 5px;
  }

  .sort-option.active {
      border: 1px solid var(--appMenu-sort-active-color);
      background-color: var(--appMenu-sort-active-color);
  }

.search-box {
	margin-bottom: 6px;
    padding-left: 10px;
    display: flex;
    align-items: flex-start;
}
.search-box input {
	color: var(--appMenu-font-color);
	width: calc(100% - 72px);
	height: 17px;
	background: none;
	border: 0;
	border-bottom: solid 1px var(--appMenu-search-input-inactive-color);
	font-size: 14px;
	transition: .2s ease-in;
}

.search-box input:focus {
	border-bottom: solid 1px var(--appMenu-search-input-active-color);
	outline: none;
}

.search-box i {
	padding-right: 5px;
}
.tags-list {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    padding-left: 10px;
    margin-bottom: 4px;
    flex-wrap: wrap;
}
.tag-item {
	cursor: default;
	margin-bottom: 5px;
	display: inline-block;
	font-size: 10px;
	padding: 3px 5px;
	margin-right: 5px;
	border-radius: 2px;
  	background-color: var(--tag-background-color);
}

.no-results {
    line-height: 22px;
    margin-top: 20px;
    text-align: center;
}

.ff-plus-circle, .ff-dashboard-new {
    padding-top: 2px;
}

.tag-name.highlight {
    text-decoration: underline;
    cursor: pointer;
}

